--- a/style1.css
+++ b/style1.css
@@ -1,4 +1,46 @@
 
+.form-group > label {
+  margin-left: 10px;
+  font-weight: normal;
+  font-size: 13px;
+}
+
+.form-group > span > label{
+  background-color: white;
+   margin-left: 10px;
+  font-weight: normal;
+  font-size: 13px;
+  padding: 4px;
+  color: grey;
+}
+
+.form-group > select {
+  margin-top: -20.5px;
+  font-weight: bold;
+  height: 45px;
+  text-indent: 5px;
+
+}
+
+.form-group > span{
+  font-size: 15px;
+  
+}
+
+.form-group > span:hover{
+  font-size: 15px;
+  margin: 15px;
+  color: #0080ff;
+  cursor: pointer;
+}
+
+.form-group > span:active{
+  font-size: 15px;
+  margin: 15px;
+  color: #0080ff;
+  
+}
+
 .chart-container {
 	overflow: hidden;
 	border-color: black;
